--- a/src/test/Makefile.inc
+++ b/src/test/Makefile.inc
@@ -13,6 +13,10 @@ TOP := $(dir $(lastword $(MAKEFILE_LIST)))../..
 
 include $(TOP)/src/common.inc
 
+CFLAGS += -fsanitize=address
+CXXFLAGS += -fsanitize=address
+LDFLAGS += -fsanitize=address
+
 INCS += $(OS_INCS)
 LDFLAGS += $(OS_LIBS)
 LIBS_DIR=$(TOP)/src
@@ -91,7 +95,9 @@ OBJS += $(TOP)/src/debug/common/ravl.o\
 	$(TOP)/src/debug/libpmemobj/ulog.o\
 	$(TOP)/src/debug/libpmemobj/sync.o\
 	$(TOP)/src/debug/libpmemobj/tx.o\
-	$(TOP)/src/debug/libpmemobj/stats.o
+	$(TOP)/src/debug/libpmemobj/stats.o\
+	$(TOP)/src/debug/libpmemobj/asan.o\
+	$(TOP)/src/debug/libpmemobj/asan_overmap.o
 
 INCS += -I$(TOP)/src/libpmemobj
 endif
@@ -119,7 +125,9 @@ OBJS +=	$(TOP)/src/nondebug/common/ravl.o\
 	$(TOP)/src/nondebug/libpmemobj/ulog.o\
 	$(TOP)/src/nondebug/libpmemobj/sync.o\
 	$(TOP)/src/nondebug/libpmemobj/tx.o\
-	$(TOP)/src/nondebug/libpmemobj/stats.o
+	$(TOP)/src/nondebug/libpmemobj/stats.o\
+	$(TOP)/src/nondebug/libpmemobj/asan.o\
+	$(TOP)/src/nondebug/libpmemobj/asan_overmap.o
 
 INCS += -I$(TOP)/src/libpmemobj
 endif
