Added asan wrappers

--- a/src/test/Makefile.inc
+++ b/src/test/Makefile.inc
@@ -97,7 +97,8 @@ OBJS += $(TOP)/src/debug/common/ravl.o\
 	$(TOP)/src/debug/libpmemobj/tx.o\
 	$(TOP)/src/debug/libpmemobj/stats.o\
 	$(TOP)/src/debug/libpmemobj/asan.o\
-	$(TOP)/src/debug/libpmemobj/asan_overmap.o
+	$(TOP)/src/debug/libpmemobj/asan_overmap.o\
+	$(TOP)/src/debug/libpmemobj/asan_wrappers.o
 
 INCS += -I$(TOP)/src/libpmemobj
 endif
@@ -127,7 +128,8 @@ OBJS +=	$(TOP)/src/nondebug/common/ravl.o\
 	$(TOP)/src/nondebug/libpmemobj/tx.o\
 	$(TOP)/src/nondebug/libpmemobj/stats.o\
 	$(TOP)/src/nondebug/libpmemobj/asan.o\
-	$(TOP)/src/nondebug/libpmemobj/asan_overmap.o
+	$(TOP)/src/nondebug/libpmemobj/asan_overmap.o\
+	$(TOP)/src/nondebug/libpmemobj/asan_wrappers.o
 
 INCS += -I$(TOP)/src/libpmemobj
 endif
