--- a/src/benchmarks/pmembench_tx.cfg
+++ b/src/benchmarks/pmembench_tx.cfg
@@ -211,6 +211,7 @@ data-size = 4
 min-size = 1
 realloc-size = 256:*2:16384
 operation = abort
+nestings = 100
 changed-type = true
 type-number = rand
 
