Use asan for the examples, benchmarks, tests Fix pmembench_tx.cfg   If the number of nestings is ommitted, the benchmark does not cancel the transaction and does an invalid free.

--- a/src/benchmarks/pmembench_map.cfg
+++ b/src/benchmarks/pmembench_map.cfg
@@ -3,7 +3,7 @@ group = pmemobj
 file = /dev/shm/testfile.map
 ops-per-thread=100000
 threads=1
-type = ctree,btree,rtree,rbtree,hashmap_tx
+type = ctree,rtree,rbtree,hashmap_tx
 
 [map_insert]
 bench = map_insert
