Added volatile fields to keep track of the current and peak pool usage   Printed at pmemobj_close   To enable, pass PMASAN_TRACK_SPACE_USAGE=1 to make

--- a/src/libpmemobj/Makefile
+++ b/src/libpmemobj/Makefile
@@ -41,3 +41,7 @@ include ../Makefile.inc
 CFLAGS += -DUSE_LIBDL -D_PMEMOBJ_INTRNL $(LIBNDCTL_CFLAGS)
 
 LIBS += -pthread -lpmem $(LIBDL) $(LIBNDCTL_LIBS)
+
+ifeq ($(PMASAN_TRACK_SPACE_USAGE), 1)
+CFLAGS += -DPMASAN_TRACK_SPACE_USAGE=$(PMASAN_TRACK_SPACE_USAGE)
+endif
