--- a/src/benchmarks/pmembench_map.cfg
+++ b/src/benchmarks/pmembench_map.cfg
@@ -1,7 +1,7 @@
 [global]
 group = pmemobj
 file = /dev/shm/testfile.map
-ops-per-thread=100000
+ops-per-thread=1000000
 threads=1
 type = ctree,rtree,rbtree,hashmap_tx
 
