typo fix in configs

--- a/src/benchmarks/pmembench_obj_gen_safepm.cfg
+++ b/src/benchmarks/pmembench_obj_gen_safepm.cfg
@@ -22,7 +22,7 @@ objects = 128:*4:32768
 type-number = rand
 repeats = 100
 
-#[obj_create_sizes_8MB]
+[obj_create_sizes_8MB]
 bench = obj_create
 data-size = 1024
 objects = 1
